--- a/Beginners_R_Data_Wrangling_Practicals.Rmd
+++ b/Beginners_R_Data_Wrangling_Practicals.Rmd
@@ -13,24 +13,6 @@ output:
   word_document:
     toc: yes
 ---
-# FIRST
-
-We need to alter how the output is displayed for this R markdown file. We want the output to be displayed in the console **NOT** within the R markdown file.      
-
-To change this:
-
-    Click on the Gear Icon > Select "Chunk Output in Console" 
- 
-![](pictures/change_output.png)
-
-# Reveal the Table of Contents 
-
-This practical has a table of contents created using the **#**. Creating headers in Markdown will automatically created a Table of Contents.      
-
-To access this: press the dashed line button on the upper right corner of the markdown file.
-
-![](pictures/TOC.png)
-
 
 # Examine the gapminder data
 
@@ -262,6 +244,19 @@ Using the iris dataset:
 
 ```
 
+Using the msleep dataset:
+
+3. Create four new columns:
+
+* weight_ratio (brainwt divided by bodywt)
+* sleep_brain_ratio (brainwt divided by sleep_total)
+* sleep_ratio (sleep_rem divided by sleep_total)
+* awake_ratio (sleep_total divided by awake)
+
+```{r}
+
+```
+
 # pipe
 
 Using the gapminder dataset:
@@ -321,83 +316,76 @@ Need to find the minimum life expectancy for each country (*HINT*: group_by and 
 
 # Reshape data     
 
-1. From the data folder, load pew.txt into R and save it as a variable called "pew"     
+1. From the data folder, load *big5_data_simple.csv* into R and save it as an object called **big5**
 
-Do this either using the import functionality or by writing out the code.      
+This data is information for about 20,000 people for the Big Five Personality Test. Data was downloaded (and modified slightly from [here](http://personality-testing.info/_rawdata/BIG5.zip))
 
-```{r}
+Do this either using the import functionality in RStudio or scripting.         
 
 ```
+```
 
-2. Examine pew    
-
-```{r}
-
+2. Examine **big5**     
+```
 ```
 
 **What format is the data in?**     
 
-3. Change the format of pew to have three columns only, one for religion, one for income bracket and one for the number of individuals in that income bracket. Save as a new data frame called *pew_long*      
+3. Change the format of **big5** to have 3 columns, one for "People", one for the question on the questionnaire (the column names) called "Question", and one for the responses to those questions called "Response". Save as a new data frame called **big5_long**        
 *REMINDER* the code format looks like this:      
 ```{r, eval = FALSE}
 gather(data, key, value, columns_info)
 ```     
 
-```{r}
-
+```
 ```
 
-4. Reshape *pew_long* to back to wide format, and save as a new data frame called *pew_wide*. 
+4. Reshape **big5_long** to back to wide format, and save as a new data frame called **big5_wide**.        
 *REMINDER* the code format looks like this:          
 ```{r, eval = FALSE}
 spread(data, key, value)
 ```     
 
-```{r}
-
+```
 ```
 
 The data should look like the original data now. *Does it?*
 
+If you completely this quickly, **challenge** yourself to work with the unmodify version of the data (*big5_data_complex.csv*) and reshape the data to long format.       
+<br> 
+
 # Reshape take 2
 
-1. From the data folder, load tb.csv into R and save it as a variable called "tb".     
+1. From the data folder, load *people_behavior_measure.txt* into R and save it as a variable called **task1**.     
 
 Do this either using the import functionality or by writing out the code.      
 
-```{r}
-
+```
 ```
 
-2. Examine tb    
-
-```{r}
+2. Examine **task1**   
 
 ```
+```
 
-3. Change the format of tb to have four columns only: iso2, year, group, values. Save as a new data frame called *tb_long*
+3. Change the format of **task1** to have 3 columns only: People, Time, Value. Save as a new data frame called **task1_long**
 
-```{r}
-
+```
 ```
 
 Is there a way we could remove the excess NAs?      
 How could I find out more about the options for the gather command?     
 Where would I go for help or more information about my command?     
 
-4. Remake tb_long but this time remove the excess NAs   
-
-```{r}
+4. Remake **task1_long** but this time remove the excess NAs   
 
 ```
+```
 
-5. Reshape *tb_long* to back to wide format, and save as a new data frame called *tb_wide*. 
+5. Reshape **task1_long** to back to wide format, and save as a new data frame called **task1_wide**. 
  
-```{r}
-
 ```
-
-
+```
 # Missing Data
 
 1. Examine the built-in dataset called airquality (head and dim the dataset)    
